# ValenciaTourRecommender

./: .gitignore  README.md  UI_plotlydash.ipynb  app.py  clustering.py  evaluation.ipynb  prueba.ipynb  pyproject.toml  requirements.txt  run_examples.ipynb  test.ipynb  view.ipynb
assets/: style.css
data/: clasificacion_items.txt  items.txt  ocupaciones.txt  preferencias.txt  puntuaciones_usuario_base.txt  puntuaciones_usuario_test.txt  usuarios_datos_personales.txt  usuarios_preferencias.txt
pages/: detail_preferences.py  groups_login.py  groups_recommender.py  groups_results.py  home.py  preferences.py  recommender.py  results.py
src/: assing_group.py  base_recommender.py  collaborative_recommender.py  content_recommender.py  data_loader.py  demographic_recommender.py  evaluation.py  get_preference.py  group_recommender.py  hibrid_recommender.py  hybrid_recommender.py  preprocess.py  recommender_evaluation.py  utils_google.py
